<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActvity</string>
    <string name="login">Login</string>
    <string name="imageButton1">Star</string>
    <string name="RadioButton1">RadioButton</string>
    <string name="CheckBox1">CheckBox</string>
    <string name="EnableSomething">Enable Something</string>
    <string name="userLogin">Name</string>

    //Strings for ListItemActivity --> CheckBox
    <string name="dialog_message">Do you Want to finish the activity?</string>
    <string name="dialog_title">Finish activity?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="button_chat">Start Chat</string>
    <string name="button_send">Send</string>
    <string name="button_weather">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="test_toolbar">Test Toolbar</string>

    <string name="menu_message">Messages</string>
    <string name="menu_graphic">Graphic</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_about">About</string>


    <string name="dialog_back">Do you want to go back?</string>


    <string name="new_message">New Message</string>
</resources>
