<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nadeem.androidlabs.ListItemsActivity">


    <RadioButton
        android:text="@string/RadioButton1"
        android:layout_columnWeight="1"
        android:gravity="fill"

        />

    <CheckBox
        android:text="@string/CheckBox1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:id="@+id/checkBoxID"
        />

    <Switch
        android:layout_columnWeight="1"
        android:text="@string/EnableSomething"
        android:gravity="fill"
        android:id="@+id/enableSomethingID"
        />

    <ImageButton
        android:contentDescription="@string/imageButton1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:background="@android:drawable/btn_star_big_on"
        android:id="@+id/imageButton"
        android:layout_height="wrap_content" />
</GridLayout>
