<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nadeem.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/textView"/>

    <Button
        android:text="@string/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="17dp"
        android:id="@+id/imButtonID" />

    <Button
        android:text="@string/button_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startChatID"
        android:layout_below="@+id/imButtonID"
        android:layout_toEndOf="@+id/imButtonID"
        android:layout_marginTop="74dp" />

    <Button
        android:text="@string/button_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonWeather"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:text="@string/test_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startChatID"
        android:layout_alignEnd="@+id/startChatID"
        android:layout_marginTop="55dp"
        android:id="@+id/test_toolbar_button" />

</RelativeLayout>
